# hermes-trading

./: .gitignore  Dockerfile  PROJECT.md  README_FIRST.md  generate_dashboard.py  generate_report.py  pyproject.toml  reflection_watchdog.sh  test_sizing.py  test_walk_forward.py
backtest_suite/: __init__.py  cli.py  config.py  orchestrator.py
backtest_suite/data_lake/: __init__.py  kraken_source.py  parquet_store.py
backtest_suite/engine/: __init__.py  execution.py  risk.py  types.py
backtest_suite/optimizer/: __init__.py  fitness.py  ga.py  grid.py  types.py
backtest_suite/persistence/: __init__.py  artifact_store.py  catalog_db.py
backtest_suite/server/: __init__.py  api.py  app.py  runs_registry.py  ws.py
backtest_suite/strategies/: __init__.py  base.py  bb_breakout.py  ema_cross.py  rsi_mr.py
docs/: walk_forward_briefing_pending.md
docs/superpowers/: BACKTEST_SUITE_STATUS.md
hermes_trading/: _engine_core.py  alert.py  backtester.py  bootstrap.py  indicators.py  loop.py  markov_regime.py  news_intelligence.py  notify.py  reflect.py  run.py  safe_guard.py  score.py  sentiment_calibrator.py  sizing.py  volume_profile.py  walk_forward.py
hermes_trading/adapters/: macro.py  news.py  onchain.py  price.py
state-template/: goal.yaml  strategy.yaml
tests/suite/: __init__.py  conftest.py  test_artifact_store.py  test_backtester_compat.py  test_bb_breakout.py  test_catalog_db.py  test_cli.py  test_config.py  test_e2e_evolve.py  test_ema_cross.py  test_engine.py  test_engine_core.py  test_kraken_source.py  test_optimizer_fitness.py  test_optimizer_ga.py  (+6 more)
(+11 files in other folders)
